# LLMguardZKP

./: LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
zkguard/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
zkguard/.github/workflows/: ci.yml  release.yml
zkguard/apps/desktop/src/: index.html
zkguard/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
zkguard/apps/desktop/src-tauri/src/: main.rs
zkguard/bindings/python/: Cargo.toml  pyproject.toml
zkguard/bindings/python/python/zkguard/: __init__.py  _lowlevel.pyi  easy.py
zkguard/bindings/python/src/: lib.rs
zkguard/bindings/python/tests/: test_zkguard.py
zkguard/crates/zkguard-core/: Cargo.toml
zkguard/crates/zkguard-core/examples/: basic_proof.rs  full_demo.rs  key_protection.rs
zkguard/crates/zkguard-core/src/: lib.rs
zkguard/crates/zkguard-core/src/batching/: merkle.rs  mod.rs
zkguard/crates/zkguard-core/src/core/: errors.rs  traits.rs  types.rs
zkguard/crates/zkguard-core/src/llm_guard/: audit.rs  encrypted_persistence.rs  handle.rs  mod.rs  persistence.rs  proxy.rs  proxy_server.rs  sanitizer.rs  scanner.rs  vault.rs
zkguard/crates/zkguard-core/src/stark/: air.rs  config.rs  key_commit_air.rs  mod.rs  range_air.rs  real_stark.rs
zkguard/crates/zkguard-core/src/utils/: compression.rs  constants.rs  hash.rs  mod.rs
zkguard/crates/zkguard-core/tests/: fuzz_tests.rs  llm_scenarios.rs
zkguard/docs/: ARCHITECTURE.md  ARCHITECTURE_KR.md  USAGE.md  USAGE_KR.md  WHY_ZKGUARD.md  WHY_ZKGUARD_KR.md
zkguard/examples/python/: basic_usage.py  easy_example.py  langchain_demo.py
zkguard/integrations/langchain/: pyproject.toml
zkguard/integrations/langchain/tests/: test_callback.py
zkguard/integrations/langchain/zkguard_langchain/: __init__.py  callback.py  middleware.py
