[workspace]
members = [
    "crates/zkguard-core",
    "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["imbanjang"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
