[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "zkguard"
version = "0.2.0"
description = "ZK-based credential protection for LLM workflows"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features = ["pyo3/extension-module", "stark", "vault-encrypt"]
python-source = "python"
module-name = "zkguard._zkguard"
manifest-path = "Cargo.toml"
