[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkguard-langchain"
version = "0.2.0"
description = "LangChain middleware for ZK-based API key protection"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
dependencies = [
    "zkguard>=0.2.0",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "langchain>=0.3"]
